# GDStatusBot

./: .gitignore  README.md  config.py  entrypoint.py  gdsb.spec  lists.py  main.py  main.spec  main_levels.py  pyproject.toml
gdsb/: __init__.py  bot.py  config.py  constants.py  errors.py  level.py  log.py
